--- a/css/style.css
+++ b/css/style.css
@@ -709,7 +709,7 @@ body {
 }  
 
 a {
-  color: #ec5598;
+  color: #507F00;
   outline: 0 none;
   text-decoration:none;
 }
@@ -813,17 +813,17 @@ table {
 	float:none;
 }
 ::selection {
-	background: #ec5598;
+	background: #507F00;
 	color: #fff;
 }
 
 ::-moz-selection {
-	background: #ec5598;
+	background: #507F00;
 	color: #fff;
 }
 
 ::-webkit-selection {
-	 background: #ec5598;
+	 background: #507F00;
 	 color: #fff;
 }
 
@@ -860,7 +860,7 @@ h3 a:hover,
 h4 a:hover, 
 h5 a:hover, 
 h6 a:hover {
-  color:#ec5598;
+  color:#507F00;
 }
 
 
@@ -1204,7 +1204,7 @@ ol.list-num-count.upper-alpha > li:before {
 	content:counter(li , upper-alpha);
 }
 ol.list-num-count.list-outline > li:before {
-	border:1px solid #EC5598;
+	border:1px solid #507F00;
 	background-color:transparent;
 	color:#787878;
 }
@@ -1580,7 +1580,7 @@ ol.list-num-count.list-outline-none > li:before {
 	2. background color
 -------------------------------------*/
 .bg-transparent{background-color:transparent;}
-.site-site-bg-primary{background-color:#ec5598;}
+.site-site-bg-primary{background-color:#507F00;}
 .bg-secondry{background-color:#4b3941;}
 .bg-white{background-color:#FFF;}
 .bg-black{background-color:#000;}
@@ -1923,7 +1923,7 @@ ol.list-num-count.list-outline-none > li:before {
 -------------------------------------*/
 .bdr-white{border-color:#ffffff;}
 .bdr-black{border-color:#000000;}
-.bdr-primary{border-color:#ec5598;}
+.bdr-primary{border-color:#507F00;}
 .bdr-gray{border-color:#dddddd;}
 .bdr-gray-light{border-color:#eeeeee;}
 .bdr-gray-dark{border-color:#333333;}
@@ -2628,7 +2628,7 @@ ol.list-num-count.list-outline-none > li:before {
 }
 
 .site-button {
-	background-color:#ec5598; 
+	background-color:#507F00; 
 }
 .site-button:active,
 .site-button:hover,
@@ -2917,8 +2917,8 @@ ol.list-num-count.list-outline-none > li:before {
 
 /* 1.29 Outline yellow */
 .site-button.outline.yellow { 
-	color: #ec5598; 
-	border-color:#ec5598; 
+	color: #507F00; 
+	border-color:#507F00; 
 }
 
 /* 1.30 Outline purple */
@@ -2972,7 +2972,7 @@ ol.list-num-count.list-outline-none > li:before {
 
 /* 1.36 text link pink */
 .site-button-link.pink { 
-	color:#e63f75;
+	color:#507F00;
 }
 .site-button-link.pink:hover,
 .site-button-link.pink:active,
@@ -3042,12 +3042,12 @@ ol.list-num-count.list-outline-none > li:before {
 
 /* 1.43 text link purple */
 .site-button-link.purple { 
-	color:#ae1af7;
+	color:#507F00;
 }
 .site-button-link.purple:hover,
 .site-button-link.purple:active,
 .site-button-link.purple:focus { 
-	color:#9804e1;
+	color:#507F00;
 }
 
 /* 1.44 app strore */
@@ -3142,7 +3142,7 @@ ol.list-num-count.list-outline-none > li:before {
 .masonry-filter.link-style.has-bg > li:hover a,
 .masonry-filter.link-style.has-bg > li:active a,
 .masonry-filter.link-style.has-bg > li:focus a {
-	color: #ec5598;
+	color: #507F00;
 }
 
 /* 1.45(3) Masonry filter button style */
@@ -3166,7 +3166,7 @@ ol.list-num-count.list-outline-none > li:before {
 .masonry-filter.button-style > li a:hover,
 .masonry-filter.button-style > li a:active,
 .masonry-filter.button-style > li a:focus {
-	background-color:#ec5598;
+	background-color:#507F00;
 	color:#fff;
 }
 .masonry-filter.button-style.has-bg > li a {
@@ -3177,7 +3177,7 @@ ol.list-num-count.list-outline-none > li:before {
 .masonry-filter.button-style.has-bg  > li a:hover,
 .masonry-filter.button-style.has-bg  > li a:active,
 .masonry-filter.button-style.has-bg  > li a:focus {
-	background-color:#ec5598;
+	background-color:#507F00;
 	color:#fff;
 }
 
@@ -3203,8 +3203,8 @@ ol.list-num-count.list-outline-none > li:before {
 .masonry-filter.outline-style > li a:hover,
 .masonry-filter.outline-style > li a:active,
 .masonry-filter.outline-style > li a:focus {
-	border-color:#ec5598;
-	color:#ec5598;
+	border-color:#507F00;
+	color:#507F00;
 }
 .masonry-filter.outline-style.has-bg > li a {
 	border-color:#fff;
@@ -3214,8 +3214,8 @@ ol.list-num-count.list-outline-none > li:before {
 .masonry-filter.outline-style.has-bg > li a:hover,
 .masonry-filter.outline-style.has-bg > li a:active,
 .masonry-filter.outline-style.has-bg > li a:focus {
-	border-color:#ec5598;
-	color:#ec5598;
+	border-color:#507F00;
+	color:#507F00;
 }
 
 @media only screen and (max-width:767px){
@@ -3680,7 +3680,7 @@ ol.list-num-count.list-outline-none > li:before {
 }
 /* 4. Accordion bg primary */
 .acc-site-bg-primary a {
-	background-color:#ec5598;
+	background-color:#507F00;
 }
 .acc-site-bg-primary .acod-head a, 
 .acc-site-bg-primary .acod-head a:hover, 
@@ -3823,14 +3823,14 @@ ol.list-num-count.list-outline-none > li:before {
 .ow-post-tags .post-tags a:hover,
 .ow-post-tags .post-tags a:active,
 .ow-post-tags .post-tags a:focus {
-	background-color: #ec5598;
+	background-color: #507F00;
     color: #fff;
 }
 .date-style-3 .ow-post-info {
 	position:relative;
 }
 .date-style-3 .ow-post-media {
-	border-bottom:3px solid #ec5598;
+	border-bottom:3px solid #507F00;
 }
 /*  empty media */
 .no-image-blog.date-style-2 .ow-post-info {
@@ -3975,7 +3975,7 @@ ol.list-num-count.list-outline-none > li:before {
 }
 .testimonial-1 .testimonial-position,
 .testimonial-grid-1 .testimonial-position {
-	color:#ec5598;
+	color:#507F00;
 }
 .testimonial-1 .testimonial-name,
 .testimonial-1 .testimonial-position,
@@ -3990,7 +3990,7 @@ ol.list-num-count.list-outline-none > li:before {
 	height:36px;
 	line-height:36px;
 	font-size:16px;
-	background-color:#ec5598;
+	background-color:#507F00;
 	color:#FFF;
 	text-align:center;
 	left:0;
@@ -4022,13 +4022,13 @@ ol.list-num-count.list-outline-none > li:before {
 	left:15px;
 	top:30px;	
 	font-size:24px;
-	color:#ec5598;
+	color:#507F00;
 }
 
 .testimonial-2 .testimonial-detail,
 .testimonial-grid-2 .testimonial-detail {
 	padding:25px 0 20px 20px;
-	background-color:#ec5598;
+	background-color:#507F00;
 }
 .testimonial-2 .testimonial-pic,
 .testimonial-grid-2 .testimonial-pic{
@@ -4078,11 +4078,11 @@ ol.list-num-count.list-outline-none > li:before {
 .testimonial-grid-3 .quote-left:before {
 	position:static;
 	font-size:40px;
-	color:#ec5598;
+	color:#507F00;
 }
 .testimonial-3 .testimonial-position,
 .testimonial-grid-3 .testimonial-position{
-	color:#ec5598;
+	color:#507F00;
 }
 .testimonial-3 .testimonial-name,
 .testimonial-3 .testimonial-position,
@@ -4103,7 +4103,7 @@ ol.list-num-count.list-outline-none > li:before {
 .testimonial-4 .testimonial-pic,
 .testimonial-grid-4 .testimonial-pic {
 	float:left;
-	border:3px solid #ec5598;
+	border:3px solid #507F00;
 	width:90px;
 	height:90px;
 	position:relative; 
@@ -4112,7 +4112,7 @@ ol.list-num-count.list-outline-none > li:before {
 
 .testimonial-4 .testimonial-pic:after,
 .testimonial-grid-4 .testimonial-pic:after{
-	border-right: 3px solid #ec5598;
+	border-right: 3px solid #507F00;
 	height:150%;
 	content: "";
 	position: absolute;
@@ -4162,7 +4162,7 @@ ol.list-num-count.list-outline-none > li:before {
 }
 .testimonial-4 .testimonial-detail,
 .testimonial-grid-4 .testimonial-detail{
-	background-color:#ec5598;
+	background-color:#507F00;
 	color:#fff;
 	padding:15px 20px 15px 70px;
 	display:inline-block;
@@ -4224,7 +4224,7 @@ ol.list-num-count.list-outline-none > li:before {
 .testimonial-4 .testimonial-detail .fa-quote-left,
 .testimonial-grid-4 .testimonial-detail .fa-quote-left{
 	background-color:#4b3941;
-	color:#ec5598;
+	color:#507F00;
 	position:absolute;
 	left:0;
 	top:0;
@@ -4358,7 +4358,7 @@ ol.list-num-count.list-outline-none > li:before {
 }
 .pricingtable-price {
 	padding:10px;
-	background-color:#ec5598;
+	background-color:#507F00;
 }
 .pricingtable-bx {
 	font-size:44px;
@@ -4453,7 +4453,7 @@ ol.list-num-count.list-outline-none > li:before {
 }
 
 .pricing-table-style-2 .pricingtable-title{
-	background-color:#ec5598;
+	background-color:#507F00;
 }
 .pricing-table-style-2 .pricingtable-title *{
 	color:#000;
@@ -4559,7 +4559,7 @@ ol.list-num-count.list-outline-none > li:before {
 .pricing-table-style-4 .pricingtable-inner{
 	position:relative;
 	overflow:hidden;
-	border-bottom:4px solid #EC5598;
+	border-bottom:4px solid #507F00;
 }
 .pricing-table-style-4 .pricingtable-inner.radius{
 	border-radius: 40px 40px 40px 40px;
@@ -4864,13 +4864,13 @@ ol.list-num-count.list-outline-none > li:before {
 	color:#fff;
 }
 .social-icons.social-light.has-bg li a:hover{
-	color:#ec5598;
+	color:#507F00;
 }
 .social-icons.social-dark a {
 	color:#777;
 }
 .social-icons.social-dark.has-bg li a:hover{
-	color:#ec5598;
+	color:#507F00;
 }
 
 .social-icons.social-square a,
@@ -4898,7 +4898,7 @@ ol.list-num-count.list-outline-none > li:before {
 
 .social-icons.social-square.social-primary a,
 .social-icons.social-radius.social-primary a {
-	background-color:#ec5598;
+	background-color:#507F00;
 	color:#FFF;
 	border:1px solid rgba(0,0,0,0.1);
 }
@@ -4923,7 +4923,7 @@ ol.list-num-count.list-outline-none > li:before {
 }
 .social-icons.social-square.social-dark.has-bg a:hover,
 .social-icons.social-radius.social-dark.has-bg a:hover {
-	border:1px solid #ec5598;	
+	border:1px solid #507F00;	
 }
 
 .social-icons.social-square.social-darkest a,
@@ -4936,7 +4936,7 @@ ol.list-num-count.list-outline-none > li:before {
 
 .social-icons.social-square.social-darkest a:hover,
 .social-icons.social-radius.social-darkest a:hover{
-	background-color:#ec5598;
+	background-color:#507F00;
 	color:#4a4c4c;
 }
 
@@ -5075,7 +5075,7 @@ ol.list-num-count.list-outline-none > li:before {
 	display:inline-block;
 }
 .wt-breadcrumb li a { 
-	color:#ec5598;	
+	color:#507F00;	
 }
 .wt-breadcrumb li:last-child { 
 	color:#676767;
@@ -5694,7 +5694,7 @@ transform: translateY(-50%);
 	margin:0 0 0;
 	width: 70px;
 	margin:10px 0;
-	background-color:#ec5598;
+	background-color:#507F00;
 }
 .widget-title:before {
 	content:"\f06c";
@@ -5777,7 +5777,7 @@ transform: translateY(-50%);
 .widget_nav_menu li a:hover,
 .widget_recent_entries ul li a:hover,
 .widget_services ul li a:hover {
-	color:#ec5598;
+	color:#507F00;
 }
 
 
@@ -5846,7 +5846,7 @@ transform: translateY(-50%);
 .searchform input[type="submit"] { 
 	height:40px;
 	padding:10px 15px;
-	background-color:#ec5598;
+	background-color:#507F00;
 	position:absolute;
 	right:0;
 	bottom:0;
@@ -6015,7 +6015,7 @@ transform: translateY(-50%);
 }
 
 .widget_categories li a:hover{
-	color:#ec5598;
+	color:#507F00;
 }
 
 /*19.12 widget RSS*/
@@ -6066,7 +6066,7 @@ transform: translateY(-50%);
 	width:30px;
 	height:30px;
 	line-height:30px;
-	background-color:#EC5598;
+	background-color:#507F00;
 }
 
 /* 19.14 widget gallery */
@@ -6504,7 +6504,7 @@ blockquote:before {
 ======================================*/ 
 
 .date-style-3 .wt-post-media{
-	border-bottom:3px solid #ec5598;
+	border-bottom:3px solid #507F00;
 }
 
 .blog-post {
@@ -6588,7 +6588,7 @@ blockquote:before {
 	font-weight:600;
 }
 .wt-post-tags .post-tags a:hover{
-	background-color:#ec5598;
+	background-color:#507F00;
 	color:#fff;
 	}
 /*-------------------------------------
@@ -6603,7 +6603,7 @@ blockquote:before {
 	width:50px;
 	text-align:center;
 	text-transform:uppercase;
-	background-color:#ec5598;
+	background-color:#507F00;
 	z-index:1;
 }
 .date-style-2 .post-date strong,
@@ -6644,7 +6644,7 @@ blockquote:before {
 }
 .date-style-3 .post-date i {
 	position:relative;
-	background:#ec5598;
+	background:#507F00;
 	color: #fff;
 	display: inline-block;
 	text-align: center;
@@ -6656,14 +6656,14 @@ blockquote:before {
 	margin-right:15px;
 }
 .date-style-3 .post-date strong {
-	color:#ec5598;
+	color:#507F00;
 	margin-right:2px;
 }
 .date-style-3.date-skew .post-date i {
 	margin-right:35px;
 }
 .date-style-3.date-skew .post-date i::after {
-	background-color: #ec5598;
+	background-color: #507F00;
 	content: "";
 	height: 100%;
 	position: absolute;
@@ -7532,7 +7532,7 @@ ol.comment-list li.comment .comment-respond .comment-form p {
 .top-bar{
 	color:#ffffff;
 	padding:10px 0;
-	background-color:#ec5598;
+	background-color:#507F00;
 }
 .top-bar .fa {
 	vertical-align: middle;
@@ -8124,10 +8124,10 @@ ol.comment-list li.comment .comment-respond .comment-form p {
 .header-nav .nav > li.active > a,
 .header-nav .nav > li.current-menu-item > a {
 	background-color: transparent;
-	color: #ec5598;
+	color: #507F00;
 }
 .header-nav .nav > li:hover > a {
-	color: #ec5598;
+	color: #507F00;
 }
 
 .header-nav .nav > li:hover > .sub-menu,
@@ -8344,7 +8344,7 @@ header .logo{
 }
 
 .header-nav .nav  li.has-child.nav-active > a{
-	color:#ec5598;
+	color:#507F00;
 }
 }
 
@@ -8395,7 +8395,7 @@ header .logo{
 }
 .header-nav .nav > li.active > a, 
 .header-nav .nav > li.current-menu-item > a {
-    color: #ec5598;
+    color: #507F00;
 }
 .header-nav .nav i{
 	float:right;	
@@ -8469,7 +8469,7 @@ header .logo{
 }
 .nav-dark.header-nav .nav > li .mega-menu > li ul a:hover {
 	background-color: #23282f;
-	color: #ec5598;
+	color: #507F00;
 }
 .nav-dark.header-nav .nav > li .mega-menu > li:after {
 	background-color:rgba(0,0,0,0.2) ;
@@ -8493,7 +8493,7 @@ header .logo{
 .nav-dark.header-nav .nav > li > a:active, 
 .nav-dark.header-nav .nav > li > a:focus {
 	background-color: #23282F;
-	color: #ec5598;
+	color: #507F00;
 }
 .nav-dark.header-nav .nav > li ul, 
 .nav-dark.header-nav .nav > li .sub-menu, 
@@ -8582,7 +8582,7 @@ header .logo{
 .site-bg-primary .header-nav .nav > li:hover > a,
 .site-bg-primary .header-nav .nav > li.active > a, 
 .site-bg-primary .header-nav .nav > li.current-menu-item > a {
-	color:#ec5598;
+	color:#507F00;
 }
 }
 
@@ -9415,7 +9415,7 @@ header .logo{
 
 .owl-carousel .owl-dots .owl-dot.active span,
 .owl-carousel .owl-dots .owl-dot:hover span {
-	background: #ec5598
+	background: #507F00
 }
 
 /*-------------------------------------
@@ -9627,7 +9627,7 @@ header .logo{
 .pagination-1 > li > span:hover, 
 .pagination-1 > li > a:focus, 
 .pagination-1 > li > span:focus {
-    background-color: #ec5598;
+    background-color: #507F00;
     border-color:transparent;
 	color: #fff;
 }
@@ -9637,7 +9637,7 @@ header .logo{
 .pagination-1 > .active > span:hover, 
 .pagination-1 > .active > a:focus, 
 .pagination-1 > .active > span:focus {
-    background-color: #ec5598;
+    background-color: #507F00;
     border-color:transparent;
 	color: #fff;
 }
@@ -9681,7 +9681,7 @@ header .logo{
 .custom-pagination.pagination-1 > li > span:hover, 
 .custom-pagination.pagination-1 > li > a:focus, 
 .custom-pagination.pagination-1 > li > span:focus {
-    background-color: #ec5598;
+    background-color: #507F00;
     border-color:transparent;
 	color: #fff;
 }
@@ -9691,7 +9691,7 @@ header .logo{
 .custom-pagination.pagination-1 > .active > span:hover, 
 .custom-pagination.pagination-1 > .active > a:focus, 
 .custom-pagination.pagination-1 > .active > span:focus {
-    background-color: #ec5598;
+    background-color: #507F00;
     border-color:transparent;
 }
 .custom-pagination.pagination-1 > .previous > a, 
@@ -9892,7 +9892,7 @@ header .logo{
 .footer-bottom .copyrights-nav li a:active,
 .footer-bottom .copyrights-nav li a:focus,
 .footer-bottom .copyrights-nav li.active a{ 
-	color:#ec5598; 
+	color:#507F00; 
 }
 
 /*-------------------------------------
@@ -9939,7 +9939,7 @@ header .logo{
 .footer-dark .footer-top a:active,
 .footer-dark .footer-top a:focus,
 .footer-dark .footer-top a:hover { 
-	color: #ec5598;
+	color: #507F00;
 }
 .footer-dark .footer-top p a{ 
 	color: #3396d1;
@@ -10695,10 +10695,10 @@ ol.commentlist li .star-rating{
 	font-size:18px;
 }
 .star-Rating-input .fa-star {
-	color:#ec5598;
+	color:#507F00;
 }
 .star-Rating-input i:hover {
-	color:#ec5598;
+	color:#507F00;
 }
 .comment-form [class*="comment-form"] input, 
 .comment-form [class*="comment-form"] textarea {
@@ -11131,7 +11131,7 @@ ol.commentlist li::after {
 	display:block;
 	margin-bottom:30px;
 	padding:20px 20px 0;
-	border:3px solid #ec5598;
+	border:3px solid #507F00;
 }
 .wt-team-five .wt-team-media img {
     margin-left:0;
@@ -11200,8 +11200,8 @@ ol.commentlist li::after {
 }
 .masonry-filter.outline-style.customize > li.active a,
 .masonry-filter.outline-style.customize > li:hover a {
-	background-color:#ec5598;
-	border-color:#ec5598;
+	background-color:#507F00;
+	border-color:#507F00;
 	color:#fff;
 }
 
@@ -11237,7 +11237,7 @@ ol.commentlist li::after {
 	display:block;
 }
 .wt-nav-pills li:hover a {
-	background-color: #ec5598;
+	background-color: #507F00;
 	color: #fff;
 }
 .wt-nav-title {
@@ -11264,7 +11264,7 @@ ol.commentlist li::after {
 	right: 100%;
 	top: -20px;
 	z-index: 1;
-	background-color:#ec5598;
+	background-color:#507F00;
 	background-image:url(../images/background/bg7.png);
 	background-repeat:repeat;
 	-webkit-transform: skew(30deg);
@@ -11354,7 +11354,7 @@ ol.commentlist li::after {
 	font-size: 36px;
 	height:60px;
 	height:60px;
-	color: #ec5598;
+	color: #507F00;
 	font-weight: bold;
 }
 
@@ -11449,7 +11449,7 @@ ol.commentlist li::after {
 	height:40px;
 	line-height:40px;
 	color:#fff;
-	background-color:#ec5598;
+	background-color:#507F00;
 	position:absolute;
 	left:0px;
 	top:0px;
@@ -11621,7 +11621,7 @@ ol.commentlist li::after {
 	font-weight:700;
 }
 .pro-banner-disc h3{
-	color:#ec5598;
+	color:#507F00;
 }
 .pro-banner-disc a{
 	position:inherit;
@@ -12004,7 +12004,7 @@ ol.commentlist li::after {
 }
 
 .circle-effect-1:after{
-	background-color:#ec5598;
+	background-color:#507F00;
 	width: 110%;
     height: 110%;
     left: -5%;
@@ -12101,7 +12101,7 @@ ol.commentlist li::after {
 	top:0px;
 	height:100%;
 	width:50%;
-	background-color:#ec5598;
+	background-color:#507F00;
 	border-right:10px solid #fff;
 }
 
@@ -12345,7 +12345,7 @@ ol.commentlist li::after {
 }
 .our-pricing-carousel .item.active-arrow{
 	position:relative;
-	background-color:#EC5598;
+	background-color:#507F00;
 }
 
 .our-pricing-carousel .item.active-arrow:after{
@@ -12356,7 +12356,7 @@ ol.commentlist li::after {
 	left:50%;
 	width:30px;
 	height:30px;
-	border-top: 18px solid #EC5598;
+	border-top: 18px solid #507F00;
 	border-left: 18px solid transparent;
 	border-right: 18px solid transparent;
 }
@@ -12461,11 +12461,11 @@ ol.commentlist li::after {
     margin-right: -1px;
 }
 .pricing-tab-content-block .wt-tabs.bg-tabs .nav-tabs > li:hover > a {
-    background-color: #ec5598;
+    background-color: #507F00;
 	color:#fff;
 }
 .pricing-tab-content-block .wt-tabs.vertical .nav-tabs li a.active{
-	background-color:#ec5598;
+	background-color:#507F00;
 	color:#fff;
 	position:relative;
 	
@@ -12694,10 +12694,10 @@ ol.commentlist li::after {
 	
 }
 .slider-dots .tp-bullet.selected{
-	background-color:#EC5598;
+	background-color:#507F00;
 }
 .slider-dots .zeus .tp-bullet::after{
-	background-color:#EC5598;
+	background-color:#507F00;
 }
 
 /*======================================
@@ -12728,7 +12728,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00e5e5e5', e
 background: -moz-linear-gradient(top,  rgba(229,229,229,0) 0%, rgba(232,166,196,0) 30%, rgba(236,85,152,1) 69%); /* FF3.6-15 */
 background: -webkit-linear-gradient(top,  rgba(229,229,229,0) 0%,rgba(232,166,196,0) 30%,rgba(236,85,152,1) 69%); /* Chrome10-25,Safari5.1-6 */
 background: linear-gradient(to bottom,  rgba(229,229,229,0) 0%,rgba(232,166,196,0) 30%,rgba(236,85,152,1) 69%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00e5e5e5', endColorstr='#ec5598',GradientType=0 ); /* IE6-9 */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00e5e5e5', endColorstr='#507F00',GradientType=0 ); /* IE6-9 */
 }
 
 
